# blender-mcp

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  build_addon.py  create_fanzhendong.py  create_fanzhendong_scene.py  create_penglai_models.py  demo_material.py  fix_principled_bsdf.py  list_objects.py  pyproject.toml  test_all_tools.py  test_comprehensive.py  test_connection.py  test_enhanced_features.py  test_new_modules.py  test_new_tools.py  test_new_tools_import.py
%APPDATA%/Blender Foundation/Blender/5.0/scripts/addons/blender_mcp_addon/: __init__.py  executor.py  server.py
%APPDATA%/Blender Foundation/Blender/5.0/scripts/addons/blender_mcp_addon/handlers/: __init__.py  animation.py  animation_preset.py  camera.py  compositor.py  curves.py  export.py  modeling.py  object.py  physics.py  render.py  rigging.py  scene.py  scene_advanced.py  simulation.py  texture_paint.py  uv.py  vse.py
%APPDATA%/Blender Foundation/Blender/5.0/scripts/addons/blender_mcp_addon/panels/: __init__.py
.cursor/: mcp.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  discord-test.yml  release.yml
addon/blender_mcp_addon/: __init__.py  executor.py  server.py
addon/blender_mcp_addon/handlers/: __init__.py  addons.py  ai_assist.py  ai_generation.py  animation.py  animation_preset.py  assets.py  auto_rig.py  batch.py  camera.py  character.py  character_template.py  checkpoint.py  cloud_render.py  collaboration.py  compat.py  compositor.py  constraints.py  curves.py  describe.py  error_suggestions.py  export.py  external.py  gpencil.py  hair.py  lighting.py  material.py  mesh_edit_advanced.py  mocap.py  modeling.py  node_utils.py  nodes.py  object.py  physics.py  preferences.py  procedural_materials.py  quick.py  reference.py  render.py  rigging.py  (+17 more)
addon/blender_mcp_addon/operators/: __init__.py
addon/blender_mcp_addon/panels/: __init__.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  EXTENDED_ROADMAP.md  INSTALLATION.md  QUICKSTART.md  ROADMAP.md  TUTORIALS.md  UNITY_QUEST_EXPORT.md
docs/en/: API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN_V2_SMART_TOOLS.md  INSTALLATION.md  MCP_SKILL_SYSTEM_GUIDE.md  PROJECT_REVIEW_2026-03.md  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  TUTORIALS.md
docs/zh/: API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALLATION.md  MCP_SKILL_SYSTEM_GUIDE.md  PROJECT_REVIEW_2026-03.md  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md
docs/zh/blender-learning/: 01_Blender基础与MCP入门.md  02_界面与导航.md  README.md
examples/: FANTASY_WARRIOR_README.md  original_fantasy_warrior.py
examples/刀剑神域/: REFERENCE_INPUT_SPEC.md  SAO_完整3D建模设计文档.md  execute_character.py  execute_sao_models.py  query_scene.py  simple_query.py
examples/刀剑神域/outputs/reference_workflow/asuna/20260318-022647/: inspect.json
examples/刀剑神域/outputs/reference_workflow/asuna/20260318-022810/: audit.json
examples/刀剑神域/outputs/reference_workflow/asuna/20260318-023000/: audit.json  brief.json  setup.json
examples/刀剑神域/outputs/reference_workflow/asuna/20260318-023446/: audit.json  brief.json  inspect.json  setup.json
examples/刀剑神域/outputs/reference_workflow/kirito/20260318-022810/: brief.json  inspect.json
examples/刀剑神域/outputs/reference_workflow/kirito/20260318-023000/: audit.json  setup.json
examples/刀剑神域/outputs/reference_workflow/kirito/20260318-023446/: audit.json  brief.json  inspect.json  setup.json
examples/刀剑神域/references/: reference_manifest.json
examples/刀剑神域/scripts/: AAA_build.py  AAA_pose_kirito_asuna.py  AAA_v2_asuna.py  AAA_v2_kirito.py  AAA_v2_klein.py  AAA_v2_sachi.py  SAO_build_all.py  blender_cmd.py  build_rigged_models.py  build_sao.py  build_via_socket.py  closeup.py  reference_brief_runtime.py  refine_reference_trio.py  refine_sao.py  run_aaa.py  run_asuna_klein.py  run_fix.py  run_kirito_asuna_pipeline.py  run_reference_workflow.py  run_rigged_pipeline.py  run_style_variants_pipeline.py  screenshot.py  take_screenshot.py
scripts/: discord_changelog.py
src/blender_mcp/: __init__.py  __main__.py  config.py  connection.py  installer.py  server.py  skill_manager.py  tools_config.py
src/blender_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/blender_mcp/tools/: __init__.py  addons.py  ai_assist.py  ai_generation.py  animation.py  animation_presets.py  assets.py  auto_rig.py  batch.py  camera.py  character.py  character_templates.py  checkpoint.py  cloud_render.py  collaboration.py  compositor.py  constraints.py  curves.py  describe.py  export.py  external.py  grease_pencil.py  hair.py  lighting.py  material.py  mesh_edit_advanced.py  mocap.py  modeling.py  nodes.py  object.py  physics.py  pipeline.py  preferences.py  procedural_materials.py  quality_audit.py  quick.py  reference.py  render.py  rigging.py  scene.py  (+17 more)
tests/: build_sao_demo.py  run_demo.py  run_live_test.py  test_blender_live.py  test_config.py  test_connection.py  test_new_tools.py  test_node_utils_regression.py  test_parity.py  test_reference_tools.py  test_reference_workflow_script.py  test_sao_reference_runtime.py  test_server.py  test_skill_manager.py  test_smoke.py  test_tools_config.py  test_tools_exports.py
