[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blender-mcp"
version = "0.1.0"
description = "MCP server for controlling Blender from AI assistants"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    {name = "Blender MCP Contributors"}
]
keywords = ["blender", "mcp", "ai", "3d", "modeling", "animation", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "websockets>=11.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
blender-mcp = "blender_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/harveyxiacn/blender-mcp"
Documentation = "https://github.com/harveyxiacn/blender-mcp/tree/main/docs/en"
Repository = "https://github.com/harveyxiacn/blender-mcp"
Issues = "https://github.com/harveyxiacn/blender-mcp/issues"
Changelog = "https://github.com/harveyxiacn/blender-mcp/blob/main/docs/en/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
blender_mcp = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "C4", "SIM"]
ignore = [
    "ANN401",
    "E501",   # line too long - handled by formatter
    "ANN001", # missing arg type annotations - too pervasive to fix now
    "ANN206", # missing classmethod return type
]

[tool.ruff.lint.per-file-ignores]
"addon/**" = [
    "ANN",    # type annotations not practical for Blender addon code
    "E402",   # module-level imports after bl_info is required by Blender
    "E701",   # multiple statements on one line (colon)
    "E702",   # multiple statements on one line (semicolon)
    "E722",   # bare except - common in Blender error handling
    "N801",   # class name naming - Blender API conventions
    "N806",   # variable naming - Blender API conventions
    "N816",   # mixed case variable naming
    "SIM",    # simplification suggestions
    "B904",   # raise from within except
    "F401",   # unused imports - re-exports for Blender
]
"examples/**" = [
    "ANN",    # type annotations not needed in example scripts
    "E402",   # import ordering in scripts
    "E701", "E702",
    "E722",
    "N",      # naming conventions relaxed for examples
    "SIM",
    "B904",
]
"tests/**" = [
    "ANN",    # type annotations not needed in test code
    "F401",   # unused imports common in test fixtures
]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "blender_mcp.tools.*"
disallow_untyped_defs = false
warn_return_any = false
disable_error_code = ["arg-type", "assignment"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["live: requires running Blender instance"]
addopts = "--ignore=tests/run_live_test.py --ignore=tests/test_blender_live.py"

